back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-pokedex-service
  namespace: pokedex-ns
spec:
  selector:
    app: back-pokedex-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
