redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: pokedex-ns
spec:
  selector:
    app: redis-pokedex-app
  ports:
    - port: 6379
      targetPort: 6379
