service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokedex-service
  namespace: pokedex-ns
spec:
  selector:
    app: pokedex-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
